<resources>
    <string name="app_name">BETTER_GS</string>
    <string name="better">BETTER</string>
    <string name="log">LOGO DA BETTER</string>
    <string name="better_slogan">WE HELP YOU FIND A BETTER WAY</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="cadastro">Cadastro</string>
    <string name="nome_completo">Nome completo</string>
    <string name="data_de_nasc">Data de nasc.</string>
    <string name="cpf">CPF</string>
    <string name="telefone">Telefone</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="comece_a_mudar_o_mundo_agora">Comece a mudar o mundo agora!</string>
    <string name="encontre_a_maneira_ideal_de_salvar_o_mundo_para_voc">Encontre a maneira ideal de salvar o mundo para você!</string>
    <string name="adicionar_um_endere_o">Adicionar um endereço ▼</string>
    <string name="esta_es_de_recarga">Estações de Recarga</string>
    <string name="aluguel">Aluguel</string>
    <string name="transporte_p_blico">Transporte Público</string>
    <string name="esta_es_de_recarga_perto_de_voc">Estações de Recarga perto de você</string>
    <string name="esta_o_de_recarga_tal">Estação de Recarga Tal</string>
    <string name="_1_2km_de_voc">1,2km de você</string>
    <string name="detalhes">Detalhes</string>
    <string name="endere_o_n_o_sei_na_onde_176_0922_093">Endereço Não Sei Na Onde, 176, 0922-093</string>
    <string name="pre_os_variam_de_r_12_04_a_r_23_00">Preços variam de R$ 12,04 a R$ 23,00</string>
    <string name="de_seg_a_dom_das_08h30_s_18h30">De seg a dom das 08h30 às 18h30</string>
    <string name="aceita_cart_es_de_cr_dito_d_bito_e_pix">Aceita cartões de crédito, débito e pix.</string>
    <string name="endere_os_cadastrados">Endereços cadastrados:</string>
    <string name="tag">Tag</string>
    <string name="endere_o">Endereço</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="cep">CEP</string>
    <string name="excluir">Excluir</string>
    <string name="editar">Editar</string>
    <string name="tag_casa_trabalho_etc">Tag (casa, trabalho etc.)</string>
    <string name="adicione_um_novo_endere_o">Adicione um novo endereço</string>
    <string name="t_tulo_da_esta_o">Título da Estação</string>
    <string name="dist_ncia_1_2_km">Distância: 1.2 km</string>
</resources>