<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >


        <TextView
            android:id="@+id/tituloAdicionarEndereco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/bold"
            android:gravity="center"
            android:text="@string/adicione_um_novo_endere_o"
            android:textColor="#253939"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/enderecoEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:autofillHints=""
            android:hint="@string/endere_o"
            android:backgroundTint="#0A2423"
            android:inputType="textPostalAddress"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/cidadeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/cidade"
            android:fontFamily="@font/bold"
            android:backgroundTint="#0A2423"
            android:inputType="text"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/estadoEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:fontFamily="@font/bold"
            android:hint="@string/estado"
            android:backgroundTint="#0A2423"
            android:inputType="text"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/cepEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/cep"
            android:fontFamily="@font/bold"
            android:backgroundTint="#0A2423"
            android:inputType="number"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/tagEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:fontFamily="@font/bold"
            android:hint="@string/tag_casa_trabalho_etc"
            android:backgroundTint="#0A2423"
            android:inputType="text"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/cadastrarButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#253939"
            android:text="@string/cadastrar"
            android:fontFamily="@font/bold"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />
    </LinearLayout>
</ScrollView>
