<!-- res/layout/activity_login.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#253939">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/better"
        android:contentDescription="@string/log" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:textColor="#A7F36B"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/better_slogan"
        android:fontFamily="@font/bold"
        android:textColor="#A7F36B"
        android:textSize="14sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/email"
        android:background="@drawable/input"
        android:padding="12dp"
        android:inputType="textEmailAddress"
        android:textColor="#000"
        android:textColorHint="#000" />

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/senha"
        android:background="@drawable/input"
        android:padding="12dp"
        android:inputType="textPassword"
        android:textColor="#000"
        android:textColorHint="#000" />

    <View
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/round_button"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:id="@+id/signupTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/cadastro"
        android:fontFamily="@font/bold"
        android:textColor="#B6DB1D"
        android:textSize="16sp"
        android:gravity="start"
        android:textStyle="normal"
        />
</LinearLayout>
