<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tituloTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comece_a_mudar_o_mundo_agora"
            android:textColor="#253939"
            android:textSize="20sp"
            android:fontFamily="@font/bold"
            android:gravity="start"
            android:paddingBottom="8dp"
            />

        <TextView
            android:id="@+id/subtituloTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/encontre_a_maneira_ideal_de_salvar_o_mundo_para_voc"
            android:fontFamily="@font/semibold"
            android:textColor="#253939"
            android:textSize="14sp"
            android:gravity="start"
            android:paddingBottom="16dp" />

        <Button
            android:id="@+id/enderecoButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/btn_orange"
            android:text="@string/adicionar_um_endere_o"
            android:textColor="#0A2423"
            android:fontFamily="@font/bold"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/irParaEnderecosTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ir para a página de endereços"
            android:textColor="@android:color/holo_blue_dark"
            android:fontFamily="@font/bold"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="16dp"
            tools:ignore="HardcodedText" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/estacoesButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_orange"
                android:text="@string/esta_es_de_recarga"
                android:fontFamily="@font/semibold"
                android:textColor="#0A2423"
                android:layout_margin="4dp" />

            <Button
                android:id="@+id/aluguelButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_orange"
                android:text="@string/aluguel"
                android:fontFamily="@font/semibold"
                android:textColor="#0A2423"
                android:layout_margin="4dp" />

            <Button
                android:id="@+id/transporteButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_orange"
                android:text="@string/transporte_p_blico"
                android:fontFamily="@font/semibold"
                android:textColor="#0A2423"
                android:layout_margin="4dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/listaTituloTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/esta_es_de_recarga_perto_de_voc"
            android:textStyle="bold"
            android:textColor="#253939"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:paddingBottom="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/listaEstacoesLayout"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/round_button"
                android:padding="12dp"
                android:layout_marginBottom="8dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/estacaoTituloTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:fontFamily="@font/semibold"
                    android:textColor="#0A2423"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/estacaoDistanciaTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text=""
                    android:fontFamily="@font/semibold"
                    android:textColor="#0A2423"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
